--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Meow+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Meow+Script&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
 	margin: 0;
 	padding: 0;
@@ -8,146 +10,172 @@
 .contenido {
 	height: 100vh;
 	position: relative;
+	z-index: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-.section-heart.open {
-	display: block;
-	background: #ecf0f1;
+
+#confetti {
 	position: absolute;
 	width: 100%;
 	height: 100%;
+	z-index: 1;
+	
 }
-.section-heart {
+.section-heart{
+	position: absolute;
+	width: 30rem;
+	height: 20rem;
+	z-index: 2;	
 	display: none;
 }
-.section-felicitaciones {
-	width: 100%;
-	height: 100%;
+.section-heart.open{
+	display: block;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+}
+.feliz_cumple{
+	color: #051F36;
+	line-height: 45px;
+}
+.feliz_cumple>.feliz,.rosmery{
+	text-transform: uppercase;
+	font-size: 1.5rem;
+}
+.feliz_cumple>.feliz{
+	margin-left: 30%;
+}
+.feliz_cumple>.rosmery{
+	margin-left: 60%;
+}
+.feliz_cumple>h1{
+	text-align: center;
+	font-size: 6rem;
+	font-weight: 100;
+	font-family: 'Meow Script', cursive;
+	text-shadow: -5px 5px 0px rgba(150, 150, 150, 0.26);
+}
+.feliz_cumple>.sombrero{
+	width: 5rem;
 	position: absolute;
-	background: #ce3635;
-	transform-origin: center;
-	clip-path: circle(0% at 50% 50%);
+	right: 0;
+	top: 15%;
+}
+.heart {
+	width: 100px;
+	height: 100px;
+	position: absolute;
+	bottom: 0;
+	background: url(https://cssanimation.rocks/images/posts/steps/heart.png)
+		no-repeat;
+	background-position: 0 0;
+	cursor: url("./assets/heartsvg.svg"),
+    pointer;
+	animation: fave-heart 1s steps(28);
+}
+.heart:hover {
+	background-position: -2800px 0;
+	transition: background 1s steps(28);
+}
+@keyframes fave-heart {
+	0% {
+		background-position: 0 0;
+	}
+	100% {
+		background-position: -2800px 0;
+	}
+}
+.section-felicitaciones {
+	display: none;
+	width: 30rem;
+	height: 30rem;
+	z-index: 3;
+	background-color: white;
+	border-radius: 10px;
 }
 .section-felicitaciones.open {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	clip-path: circle(100% at 50% 50%);
 	transition: 1s ease;
+	padding: 2rem;
 }
-#confetti {
-	position: absolute;
+.contenido-felicitaciones{
 	width: 100%;
 	height: 100%;
-}
-.sobre-carta{
-	display: flex;
-	justify-content: center;
-	width: 30rem;
-	height: 30rem;
-	position: relative;
-	z-index: 0;
-	filter: drop-shadow(-1px 6px 3px rgba(43, 43, 43, 0.5));
-}
-.tapa-sobre {	
-	position: absolute;
-	width: 100%;
-	height: 10.5rem;
-	background: linear-gradient(to bottom, #ECF0F1, #bdc3c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-	;
-	clip-path: polygon(48% 0, 52% 0, 100% 90%, 100% 100%, 0 100%, 0 91%);
-}
-.cuerpo-sobre{
-	z-index: 1;
-	position: absolute;
-	width: 100%;
-	height: 20rem;
-	background: linear-gradient(to top, #ECF0F1, #bdc3c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-	;
-	bottom: 0;
-	
-}
-.btn-carta{
-	position: absolute;
-	z-index: 3;
-	height: 18rem;
-	width: 80%;	
-	background: url("assets/paper.jpg");
-	background-size: cover;
-	background-position: top;
-	bottom: 1rem;
-	transition: 1s ease-in-out;
+	border: 1px solid #ce3635;
 	border-radius: 10px;
-	box-shadow: -1px -1px 5px 0px rgba(65, 65, 65, 0.47);
+	text-align: center;
+	position: relative;
 	display: flex;
+	justify-content: center;
+	align-items: center;
 	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+}
+.contenido-felicitaciones>h3{
+	font-family: 'Nunito', sans-serif;
+	text-transform: uppercase;
+	color: #FC4868;
+	letter-spacing: 5px;
+}
+.contenido-felicitaciones>h1{
+	font-family: 'Nunito', sans-serif;
+	text-transform: capitalize;
+	color: #C60344;
+	font-size: 3rem;
+}
+.contenido-felicitaciones>p{
+	font-family: 'Nunito', sans-serif;
+	color: #fc809b;
+}
+.contenido-felicitaciones .foto{
+	width: 5rem;
+	margin: 2rem 0;
+	border: 5px solid white;
+	border-bottom: 15px solid white;
+	box-shadow: 1px 1px 5px 1px rgba(65, 65, 65, 0.47);
+}
+.contenido-felicitaciones .foto.uno{
+	position: absolute;
+	top: 0;
+	left: 0;
+	transform: rotate(-30deg);
+}
+.contenido-felicitaciones .foto.dos{
+	position: absolute;
+	top: 0;
+	right: 0;
+	transform: rotate(30deg);
+}
+.abrir_carta{
+	width: 2rem;
+	transform: rotate(-5deg);
+	position: absolute;
+	bottom: 1rem;
+	right: 1rem;
+	cursor: url("./assets/heartsvg.svg"),
+    pointer;
+	transition: 0.2s;
+}
+.abrir_carta:hover{
+	width: 2.5rem;
+}
+.btn-atras{
 	cursor: pointer;
-}
-.btn-carta:hover{
-	bottom: 10rem;
-}
-.cuerpo-atras-sobre{
-	z-index: 4;
-	position: absolute;
-	width: 100%;
-	height: 20rem;
-	bottom: 0;
-	background: #ecf0f1;
-	clip-path: polygon(50% 50%, 100% 0, 100% 100%, 0 100%, 0 0);
-}
-.cuerpo-atras-sobre h2{
-	position: absolute;
-	font-family: 'Dancing Script', cursive;
-	font-size: 3rem;
-	bottom: 2rem;
-	color: #323232;
-	left: 1rem;
-}
-.btn-carta h2{
-	font-size: 3rem;
-	font-family: 'Dancing Script', cursive;
-	/* opacity: 0.8; */
-	color: #1C46A7;
-}
-.btn-carta .corazon{
-	font-size: 5rem;
-	color: #E2264D;
-}
-.btn-carta .corazon:hover{
-	color: #ce3635;
-}
-.section-galeria {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	background: #ce3635;
-	transform-origin: center;
-	clip-path: circle(0% at 50% 50%);
-}
-.section-galeria.open {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	clip-path: circle(100% at 50% 50%);
-	transition: 1s ease;
+	border: 1px solid blue;
 }
 
 /* CARTA */
 .section-carta {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	background: #3498db;
-	transform-origin: center;
-	clip-path: polygon(50% 50%, 50% 50%, 50% 50%, 50% 50%);;
+	display: none;
 }
 .section-carta.open{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-	transition: 0.5s ease;
 }
 
 .carta {
@@ -160,13 +188,12 @@
 	position: relative;
 	border-radius: 5px;
 }
-h1, p {
+.carta__titulo, .carta__texto {
 	font-family: 'Dancing Script', cursive;
 	font-size: 1.5rem;
 	color: #1C46A7;
 }
-p{
-	
+.carta__texto{	
 	display: none;
 }
 .fotos{
@@ -182,28 +209,4 @@ p{
 	width: 4.1rem;
 }
 
-.heart {
-	width: 100px;
-	height: 100px;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
-	background: url(https://cssanimation.rocks/images/posts/steps/heart.png)
-		no-repeat;
-	background-position: 0 0;
-	cursor: pointer;
-	animation: fave-heart 1s steps(28);
-}
-.heart:hover {
-	background-position: -2800px 0;
-	transition: background 1s steps(28);
-}
-@keyframes fave-heart {
-	0% {
-		background-position: 0 0;
-	}
-	100% {
-		background-position: -2800px 0;
-	}
-}
+
